Impl [Nuclio] Resources: CPU: Remove warning icon + message

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -60,13 +60,7 @@
             </div>
 
             <div class="igz-row form-row range-inputs-row">
-                <div class="igz-col-20 row-title">{{ 'common:CPU' | i18next }}
-                    <igz-more-info data-trigger="click"
-                                   data-is-html-enabled="true"
-                                   data-is-open="$ctrl.cpuWarningOpen"
-                                   data-icon-type="{{$ctrl.cpuWarningOpen ? 'warn' : 'info'}}"
-                                   data-description="{{ 'common:RESOURCES_WARNING_LIMIT_FILLED_REQUEST_EMPTY' | i18next:{ when: 'the function is deployed' } }}"></igz-more-info>
-                </div>
+                <div class="igz-col-20 row-title">{{ 'common:CPU' | i18next }}</div>
 
                 <div class="igz-col-40 input-wrapper">
                     <div class="input-title">{{ 'common:REQUEST' | i18next }}</div>
