[Nuclio] Allow overriding existing function on creation

--- a/src/nuclio/common/screens/create-function/create-function.tpl.html
+++ b/src/nuclio/common/screens/create-function/create-function.tpl.html
@@ -98,6 +98,7 @@
             <ncl-function-import data-ng-if="$ctrl.isTypeSelected('import')"
                                  data-toggle-splash-screen="$ctrl.toggleSplashScreen(value)"
                                  data-project="$ctrl.project"
+                                 data-get-function="$ctrl.getFunction({metadata: metadata})"
                                  data-selected-project="$ctrl.selectedProject"
                                  data-create-new-project="$ctrl.createNewProject"
                                  data-projects="$ctrl.projects">
