Fix [Nuclio] Configuration: Onbuild image description obstructed
Also, it has redundant forward slash characters: "{\{" instead of "{{".

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -62,7 +62,8 @@
                 <div class="field-label label-with-tooltip align-items-center">
                     <span>{{ 'functions:ONBUILD_IMAGE' | i18next }}</span>
                     <igz-more-info
-                            data-description="{{ 'functions:ONBUILD_IMAGE_DESCRIPTION' | i18next }}"
+                            data-description="{{$ctrl.onBuildImageDescription}}"
+                            data-default-tooltip-placement="left"
                             data-trigger="click">
                     </igz-more-info>
                 </div>
