[Nuclio] Triggers: add default HTTP trigger & Service Type

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -129,7 +129,7 @@
                 <div class="common-table-cell actions-menu">&nbsp;</div>
             </div>
 
-            <div class="search-input-not-found"
+            <div class="content-message-pane"
                  data-ng-if="$ctrl.isFunctionsListEmpty()">
                 {{ 'functions:FUNCTIONS_NOT_FOUND' | i18next }}
             </div>
