--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -106,7 +106,12 @@
                                                       data-enable-overlap="true">
                                 </igz-default-dropdown>
                                 <div class="path">
-                                    {{$ctrl.getInvocationUrl()}}
+                                    <span class="invocation-url" data-ng-if="$ctrl.version.ui.invocationUrl.valid">
+                                        {{$ctrl.version.ui.invocationUrl.text}}/
+                                    </span>
+                                    <span data-ng-if="!$ctrl.version.ui.invocationUrl.valid">
+                                        {{ 'common:PATH' | i18next }}:
+                                    </span>
                                     <igz-validating-input-field data-field-type="input"
                                                                 data-input-value="$ctrl.selectedEvent.spec.attributes.path"
                                                                 data-update-data-field="spec.attributes.path"
