--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -1,5 +1,8 @@
 <div class="ncl-version-trigger ncl-version">
     <div class="common-table">
+        <div class="content-message-pane"
+             data-ng-if="$ctrl.isHttpTriggerMsgShown()" ng-i18next="[html]functions:HTTP_TRIGGER_MSG">
+        </div>
         <div class="common-table-header header-row">
             <div class="common-table-cell header-name">
                 {{ 'common:NAME' | i18next }}
@@ -11,11 +14,9 @@
                 {{ 'common:INFO' | i18next }}
             </div>
         </div>
-        <div class="search-input-not-found"
+        <div class="content-message-pane"
              data-ng-if="$ctrl.triggers.length === 0">
-            <div class="search-message">
-                {{ 'functions:TRIGGERS_NOT_FOUND' | i18next }}
-            </div>
+            {{ 'functions:TRIGGERS_NOT_FOUND' | i18next }}
         </div>
 
         <div class="common-table-body" data-igz-extend-background>
