Impl [Nuclio] Triggers: add tooltip and test-id to delete button

--- a/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
+++ b/src/nuclio/functions/version/version-triggers/version-triggers.tpl.html
@@ -26,6 +26,7 @@
                 <ncl-collapsing-row data-ng-repeat="trigger in $ctrl.triggers track by trigger.name"
                                     data-item="trigger"
                                     data-type="trigger"
+                                    data-delete-test-id="functions.triggers_delete.button"
                                     data-action-handler-callback="$ctrl.handleAction(actionType, selectedItem)">
                     <ncl-edit-item class="common-table-cells-container edit-trigger-row"
                                    data-item="trigger"
