--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -32,19 +32,19 @@
                                      data-item-index="$index"
                                      data-use-type="false"
                                      data-validation-rules="$ctrl.validationRules"
-                                     data-is-disabled="$ctrl.isVersionDeployed($ctrl.version)"
+                                     data-is-disabled="$ctrl.isLabelsDisabled()"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
                                      data-submit-on-fly="true"
-                                     data-key-tooltip="$ctrl.addNewLabelTooltip"
-                                     data-value-tooltip="$ctrl.addNewLabelTooltip">
+                                     data-key-tooltip="$ctrl.isLabelsDisabled() ? $ctrl.addNewLabelTooltip : ''"
+                                     data-value-tooltip="$ctrl.isLabelsDisabled() ? $ctrl.addNewLabelTooltip : ''">
                 </ncl-key-value-input>
             </div>
         </div>
         <div class="igz-create-button create-label-button"
-             data-ng-class="{'disabled': $ctrl.isVersionDeployed($ctrl.version)}"
+             data-ng-class="{'disabled': $ctrl.isLabelsDisabled()}"
              data-ng-click="$ctrl.addNewLabel($event)"
-             data-uib-tooltip="{{$ctrl.addNewLabelTooltip}}"
+             data-uib-tooltip="{{$ctrl.isLabelsDisabled() ? $ctrl.addNewLabelTooltip : ''}}"
              data-tooltip-append-to-body="true"
              data-tooltip-placement="right"
              data-tooltip-popup-delay="100">
