--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -77,25 +77,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="fs-group-block">
-                <div class="label">{{ 'common:FS_GROUP' | i18next }}</div>
-                <igz-number-input data-allow-empty-field="true"
-                                  data-value-step="1"
-                                  data-min-value="0"
-                                  data-max-value="4294967295"
-                                  data-form-object="$ctrl.basicSettingsForm"
-                                  data-input-name="fs_group"
-                                  data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
-                                  data-update-number-input-field="spec.securityContext.fsGroup"
-                                  data-current-value="$ctrl.version.spec.securityContext.fsGroup">
-                </igz-number-input>
-            </div>
             <div class="run-as-user-block">
-                <div class="label">{{ 'common:RUN_AS_USER' | i18next }}</div>
+                <div class="label" data-ng-class="{asterisk: $ctrl.version.spec.securityContext.runAsGroup}">
+                    {{ 'common:RUN_AS_USER' | i18next }}
+                </div>
                 <igz-number-input data-allow-empty-field="true"
+                                  data-validation-is-required="$ctrl.lodash.isNumber($ctrl.version.spec.securityContext.runAsGroup)"
                                   data-value-step="1"
                                   data-min-value="0"
-                                  data-max-value="4294967295"
+                                  data-max-value="2147483647"
                                   data-form-object="$ctrl.basicSettingsForm"
                                   data-input-name="run_as_user"
                                   data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
@@ -108,12 +98,25 @@
                 <igz-number-input data-allow-empty-field="true"
                                   data-value-step="1"
                                   data-min-value="0"
-                                  data-max-value="4294967295"
+                                  data-max-value="2147483647"
                                   data-form-object="$ctrl.basicSettingsForm"
                                   data-input-name="run_as_group"
                                   data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
                                   data-update-number-input-field="spec.securityContext.runAsGroup"
                                   data-current-value="$ctrl.version.spec.securityContext.runAsGroup">
+                </igz-number-input>
+            </div>
+            <div class="fs-group-block">
+                <div class="label">{{ 'common:FS_GROUP' | i18next }}</div>
+                <igz-number-input data-allow-empty-field="true"
+                                  data-value-step="1"
+                                  data-min-value="0"
+                                  data-max-value="2147483647"
+                                  data-form-object="$ctrl.basicSettingsForm"
+                                  data-input-name="fs_group"
+                                  data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
+                                  data-update-number-input-field="spec.securityContext.fsGroup"
+                                  data-current-value="$ctrl.version.spec.securityContext.fsGroup">
                 </igz-number-input>
             </div>
         </div>
