[Nuclio] Function: Inform about UI precedence over external

--- a/src/nuclio/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/functions/version/version-code/version-code.tpl.html
@@ -95,6 +95,7 @@
                                 </igz-validating-input-field>
                             </div>
                         </div>
+                        <div class="code-entry-row" data-ng-i18next="[html]functions:CODE_ENTRY_TYPE_NOTE"></div>
                     </div>
 
                     <div data-ng-if="$ctrl.selectedEntryType.id === 'image'"
