Impl [Nuclio] Create function: reword name collision messages

--- a/src/nuclio/functions/override-function-dialog/override-function-dialog.tpl.html
+++ b/src/nuclio/functions/override-function-dialog/override-function-dialog.tpl.html
@@ -21,7 +21,7 @@
                 data-test-id="functions.override_function_override.button"
                 tabindex="2"
                 data-ng-click="$ctrl.overrideFunction()">
-            {{ 'functions:OVERRIDE' | i18next }}
+            {{ 'functions:OVERWRITE' | i18next }}
         </button>
     </div>
 </div>
