[API gateways] Get authentication type options from backend

--- a/src/nuclio/api-gateways/new-api-gateway-wizard/new-api-gateway-wizard.tpl.html
+++ b/src/nuclio/api-gateways/new-api-gateway-wizard/new-api-gateway-wizard.tpl.html
@@ -28,7 +28,7 @@
                                 <div class="field-input">
                                     <igz-default-dropdown data-select-property-only="id"
                                                           data-test-id="api-gateways.wizard_auth-mode.dropdown"
-                                                          data-values-array="$ctrl.authMode"
+                                                          data-values-array="$ctrl.authModes"
                                                           data-form-object="$ctrl.apiGatewayForm"
                                                           data-is-required="true"
                                                           data-prevent-drop-up="true"
