Cleanup [Nuclio] Duplicate function: rename `name` attr of Name
Rename from `spec.displayName` to `new-name`.

--- a/src/nuclio/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
+++ b/src/nuclio/functions/duplicate-function-dialog/duplicate-function-dialog.tpl.html
@@ -12,7 +12,7 @@
             </div>
             <div class="field-input function-name-input">
                 <igz-validating-input-field data-field-type="input"
-                                            data-input-name="spec.displayName"
+                                            data-input-name="new-name"
                                             data-input-value="$ctrl.newFunctionName"
                                             data-is-focused="true"
                                             data-form-object="$ctrl.duplicateFunctionForm"
