--- a/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -70,14 +70,25 @@
             </div>
             <div class="igz-col-12-5 common-table-cell"
                  data-test-id="functions.item-invocation-url"
-                 data-ng-show="$ctrl.isFunctionCollapsed"
-                 data-uib-tooltip="{{$ctrl.invocationUrl.text}}"
-                 data-tooltip-append-to-body="true"
-                 data-tooltip-placement="top">
-                <span class="common-table-cell-content">{{$ctrl.invocationUrl.text}}</span>
+                 data-ng-show="$ctrl.isFunctionCollapsed">
+                <span class="common-table-cell-content"
+                      data-uib-tooltip="{{$ctrl.invocationUrl.text}}"
+                      data-tooltip-append-to-body="true"
+                      data-tooltip-placement="top">{{$ctrl.invocationUrl.text}}</span>
                 <div class="igz-action-panel" data-ng-if="$ctrl.invocationUrl.valid">
                     <div class="actions-list">
                         <igz-copy-to-clipboard data-value="$ctrl.invocationUrl.text"></igz-copy-to-clipboard>
+                    </div>
+                </div>
+                <div class="igz-action-panel invocation-tooltip" data-ng-if="!$ctrl.invocationUrl.valid &&
+                $ctrl.isIngressInvalid() && !$ctrl.lodash.startsWith($ctrl.lodash.get($ctrl.function, 'status.state'),'error')">
+                    <div class="actions-more-info">
+                        <igz-more-info
+                                data-description="{{ 'functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE' |
+                                i18next:{functionId: $ctrl.function.metadata.name} }}"
+                                data-is-html-enabled="true"
+                                data-trigger="click">
+                        </igz-more-info>
                     </div>
                 </div>
             </div>
