--- a/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -4,7 +4,7 @@
          data-ng-scrollbars-config="$ctrl.scrollConfig">
         <div class="ncl-version-monitoring-wrapper">
             <div class="row">
-                <div class="monitoring-block">
+                <div class="monitoring-block invocation-block">
                     <span class="monitoring-block-title">
                         {{ 'functions:INVOCATION_URL' | i18next }}:
                     </span>
@@ -22,6 +22,14 @@
                     <span data-ng-if="!$ctrl.version.ui.invocationUrl.valid"
                           class="monitoring-invocation-field-invalid">
                             {{$ctrl.version.ui.invocationUrl.text}}
+                            <igz-more-info
+                                    data-ng-if="$ctrl.isIngressInvalid() &&
+                                    !$ctrl.lodash.startsWith($ctrl.lodash.get($ctrl.version, 'status.state'),'error')"
+                                    data-description="{{ 'functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE' |
+                                    i18next:{functionId: $ctrl.version.metadata.name} }}"
+                                    data-is-html-enabled="true"
+                                    data-trigger="click">
+                            </igz-more-info>
                     </span>
                 </div>
                 <div class="monitoring-block"
