--- a/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
+++ b/src/nuclio/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
@@ -44,12 +44,10 @@
                     <igz-copy-to-clipboard data-value="$ctrl.invocationUrl.text"></igz-copy-to-clipboard>
                 </div>
             </div>
-            <div class="igz-action-panel invocation-tooltip" data-ng-if="!$ctrl.invocationUrl.valid &&
-             $ctrl.isIngressInvalid() && !$ctrl.lodash.startsWith($ctrl.lodash.get($ctrl.function, 'status.state'),'error')">
+            <div class="igz-action-panel invocation-tooltip" data-ng-if="$ctrl.invocationUrl.info">
                 <div class="actions-more-info">
                     <igz-more-info
-                            data-description="{{ 'functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE' |
-                            i18next:{functionId: $ctrl.function.metadata.name} }}"
+                            data-description="{{ 'functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE' | i18next:{functionId: $ctrl.function.metadata.name} }}"
                             data-is-html-enabled="true"
                             data-trigger="click">
                     </igz-more-info>
