--- a/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -23,10 +23,8 @@
                           class="monitoring-invocation-field-invalid">
                             {{$ctrl.version.ui.invocationUrl.text}}
                             <igz-more-info
-                                    data-ng-if="$ctrl.isIngressInvalid() &&
-                                    !$ctrl.lodash.startsWith($ctrl.lodash.get($ctrl.version, 'status.state'),'error')"
-                                    data-description="{{ 'functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE' |
-                                    i18next:{functionId: $ctrl.version.metadata.name} }}"
+                                    data-ng-if="$ctrl.version.ui.invocationUrl.info"
+                                    data-description="{{ 'functions:TOOLTIP.TO_MAKE_FUNCTION_ACCESSIBLE' | i18next:{functionId: $ctrl.version.metadata.name} }}"
                                     data-is-html-enabled="true"
                                     data-trigger="click">
                             </igz-more-info>
