Impl [Nuclio] Function: Remove build image name prefix from field
When the build image name (`spec.build.image`) includes the system's
image-name prefix, split it so the prefix is only readonly to the left
of the input field, and only the name itself is editable in the input
field.

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -26,12 +26,11 @@
                     <span class="flex-none">{{ $ctrl.version.ui.imageNamePrefix }}</span>
                     <igz-validating-input-field data-field-type="input"
                                                 data-input-name="imageName"
-                                                data-input-value="$ctrl.version.spec.build.image"
+                                                data-input-value="$ctrl.imageName"
                                                 data-is-focused="false"
                                                 data-form-object="$ctrl.buildForm"
                                                 data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_IMAGE_NAME' | i18next }}"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                                data-update-data-field="spec.build.image"
                                                 data-validation-max-length="{{$ctrl.maxLengths.imageName}}"
                                                 data-validation-pattern="$ctrl.imageNameValidationPattern"
                                                 data-is-disabled="$ctrl.disabled"
