--- a/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -77,7 +77,9 @@
                         <button class="igz-button-secondary small"
                                 data-ng-class="{'disabled': $ctrl.isDisabledTestButton()}"
                                 data-ng-click="$ctrl.isDisabledTestButton() ? angular.noop : $ctrl.testEvent()"
-                                data-tooltip-enable="$ctrl.version.status.state !== 'ready' || $ctrl.version.spec.disable"
+                                data-tooltip-enable="$ctrl.version.status.state !== 'ready'        &&
+                                                     $ctrl.version.status.state !== 'scaledToZero' ||
+                                                     $ctrl.version.spec.disable"
                                 data-uib-tooltip="{{ 'functions:TOOLTIP.DISABLED_FUNCTION' | i18next }}"
                                 data-tooltip-popup-delay="300"
                                 data-tooltip-placement="top"
