Impl [Nuclio] Enrich function list with API GW only when needed

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -146,13 +146,13 @@
                                         data-action-handler-callback="$ctrl.handleFunctionVersionAction(actionType, checkedItems)"
                                         data-function="aFunction"
                                         data-functions-list="$ctrl.functions"
-                                        data-get-function="$ctrl.getFunction({metadata: metadata, projectID: projectID})"
+                                        data-get-function="$ctrl.getFunction({metadata: metadata, projectId: projectId})"
                                         data-get-functions="$ctrl.getFunctions({id: id})"
                                         data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
                                         data-is-splash-showed="$ctrl.isSplashShowed"
                                         data-project="$ctrl.project"
                                         data-refresh-functions-list="$ctrl.refreshFunctions()"
-                                        data-update-function="$ctrl.updateFunction({function: function, projectID: projectID})">
+                                        data-update-function="$ctrl.updateFunction({function: function, projectId: projectId})">
                                 </ncl-function-collapsing-row>
                             </div>
                         </div>
