Fix [Nuclio] Function: missing error on disabling with API GW

--- a/src/nuclio/functions/functions.tpl.html
+++ b/src/nuclio/functions/functions.tpl.html
@@ -146,7 +146,7 @@
                                         data-action-handler-callback="$ctrl.handleFunctionVersionAction(actionType, checkedItems)"
                                         data-function="aFunction"
                                         data-functions-list="$ctrl.functions"
-                                        data-get-function="$ctrl.getFunction({metadata: metadata, projectId: projectId})"
+                                        data-get-function="$ctrl.getFunction({metadata: metadata})"
                                         data-get-functions="$ctrl.getFunctions({id: id})"
                                         data-handle-delete-function="$ctrl.deleteFunction({functionData: functionData})"
                                         data-is-splash-showed="$ctrl.isSplashShowed"
