Impl [Nucio] Function volumes: Bring back Host Path kind
Also:
- Add read-only checkbox to host-path volumes.
- For local platform: host path is the only kind available.
  For K8s platform: all kinds besides host path are available.

--- a/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -17,7 +17,7 @@
                     <div class="common-table-cell item-class">
                         {{ 'common:TYPE' | i18next }}
                     </div>
-                    <div class="igz-col-70 common-table-cell">
+                    <div class="common-table-cell item-info">
                         {{ 'functions:MOUNT_PATH_PARAMS' | i18next }}
                     </div>
                 </div>
